# crewai_automation

./: .gitignore  README.md  pyproject.toml  report.md
blobs/: fixes.md
src/crewai_automation/: crew.py  main.py
src/crewai_automation/config/: agents.yaml  tasks.yaml
