[project]
name = "crewai_automation"
version = "0.1.0"
description = "crewai_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
crewai_automation = "crewai_automation.main:run"
run_crew = "crewai_automation.main:run"
train = "crewai_automation.main:train"
replay = "crewai_automation.main:replay"
test = "crewai_automation.main:test"
run_with_trigger = "crewai_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
