[project]
name = "crewai_automation"
version = "0.1.0"
description = "crewai_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.8.0",
    "crewai[tools]==1.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.7",
    "langchain-groq>=1.1.1",
    "litellm>=1.75.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
]

[project.scripts]
crewai_automation = "crewai_automation.main:run"
run_crew = "crewai_automation.main:run"
train = "crewai_automation.main:train"
replay = "crewai_automation.main:replay"
test = "crewai_automation.main:test"
run_with_trigger = "crewai_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
